--- a/index.html
+++ b/index.html
@@ -1,57 +1,73 @@
 <html>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<!-- Stlyesheets -->
+		<link rel="stylesheet" href="css/style.css" />
+		<link rel="stylesheet" href="css/themes.css" />
 
-  <!-- Stlyesheets -->
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/themes.css">
+		<link rel="icon" href="./favicons/favicon.ico" type="image/x-icon" />
 
-  <link rel="icon" href="./favicons/favicon.ico" type="image/x-icon">
+		<!-- Fonts -->
+		<link rel="preconnect" href="https://fonts.gstatic.com" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap"
+			rel="stylesheet"
+		/>
+		<link
+			href="https://fonts.googleapis.com/icon?family=Material+Icons"
+			rel="stylesheet"
+		/>
 
-  <!-- Fonts -->
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+		<title>Home</title>
+	</head>
 
-  <title>root@termstart ~</title>
-</head>
+	<body>
+		<div id="titlebar">
+			<div class="date-section">
+				<span id="clock"> </span>
+				<span id="date"></span>
+			</div>
+			<div class="dots">
+				<span class="dot themes"></span>
+				<span class="dot list"></span>
+			</div>
+		</div>
+		<div id="terminal-content">
+			<p id="prompt" class="prompt">
+				<span class="purple material-icons md-36">chevron_right</span>
+			</p>
 
-<body>
-  <div id="titlebar">
-    <span id="clock"> </span>
-    <span class="dot themes"></span>
-    <span class="dot list"></span>
+			<div id="links">
+				<!-- Added sites goes here -->
+			</div>
 
-  </div>
-  <div id="terminal-content">
+			<div style="display: flex" id="shit">
+				<div id="input-prompt">
+					<p id="prompt" class="prompt">
+						<span class="purple material-icons md-36">chevron_right</span>
+					</p>
+				</div>
 
-    <p id="prompt" class="prompt"><span class="purple material-icons md-36">chevron_right</span></p>
+				<input
+					type="text"
+					placeholder="..."
+					id="prompt-input"
+					autofocus
+					class="prompt-input"
+					onkeydown=""
+					spellcheck="false"
+				/>
+			</div>
+		</div>
 
-    <div id="links">
-      <!-- Added sites goes here -->
-    </div>
-
-    <div style="display:flex;" id="shit">
-
-      <div id="input-prompt">
-          <p id="prompt" class="prompt"><span class="purple material-icons md-36">chevron_right</span></p>
-      </div>
-
-      <input type="text" placeholder="..." id="prompt-input" autofocus class="prompt-input" onkeydown="" spellcheck="false" />
-
-    </div>
-  </div>
-
-  <script src="js/bowser.js"></script>
-  <script src="js/consts.js"></script>
-  <script src="js/utils.js"></script>
-  <script src="js/writers.js"></script>
-  <script src="js/commands.js"></script>
-  <script src="js/main.js"></script>
-  <script src="js/helpers.js"></script>
-
-</body>
-
+		<script src="js/bowser.js"></script>
+		<script src="js/consts.js"></script>
+		<script src="js/utils.js"></script>
+		<script src="js/writers.js"></script>
+		<script src="js/commands.js"></script>
+		<script src="js/main.js"></script>
+		<script src="js/helpers.js"></script>
+	</body>
 </html>
