--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="css/style.css" />
 		<link rel="stylesheet" href="css/themes.css" />
 
-		<link rel="icon" href="./favicons/favicon.ico" type="image/x-icon" />
+		<!-- <link rel="icon" href="./favicons/favicon.ico" type="image/x-icon" /> -->
 
 		<!-- Fonts -->
 		<link rel="preconnect" href="https://fonts.gstatic.com" />
